security-grp.tf
resource "aws_security_group" "apache_sg" {
  name        = "apache_sg"
  description = "apache security group"
  vpc_id      = module.apache-vpc.vpc_id

  egress {
    description      = "Egress Out"
    from_port        = 0
    to_port          = 0
    protocol         = -1
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  ingress {
    description      = "HTTPS From anywhere"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
    self             = true
  }
  tags = {
    Name = "unlock-my-life"

  }
}


resource "aws_security_group_rule" "apache_80" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  security_group_id = aws_security_group.apache_sg.id
  cidr_blocks       = ["0.0.0.0/0"]
  ipv6_cidr_blocks  = ["::/0"]

}
